feat: notify findAll(), findAllByisDisplayed add